fixed the div card results and overflow of text from sizing, pictures arent centering perfectly so using padding 50px at the moment

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -40,7 +40,7 @@ html, body{
 
 }
 .card {
-    padding-top: 100px;
+    padding-top: 50px;
 }
 .card-text {
     height: 150px;
